# arxiv-summary

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: arxiv_bot.yml  main.yml
config/: config.py  keywords.txt
src/: __init__.py  arxiv_fetcher.py  discord_poster.py  gemini_summarizer.py  main.py
