[project]
name = "arxiv-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "ipykernel>=6.29.5",
    "openai>=1.59.9",
    "pytest>=8.3.4",
    "requests>=2.32.3",
]

[tool.pytest]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"